Using Java 17 to attempt compatibility with Railway